clear bindings every eval